--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -159,6 +159,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -701,6 +702,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -1162,7 +1164,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1178,13 +1179,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:150:6::1;
-allow 2a05:b0c7:67b0::1;
-allow 2a05:b0c7:67bb::1;
-allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:696c::1;
-allow 2a05:b0c7:6978::1;
-allow 2a05:b0c7:6b6c::1;
-allow 2a05:b0c7:6c28::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1391,7 +1385,6 @@ allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
-allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
@@ -1435,13 +1428,13 @@ allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.114.37.81;
-allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1559,7 +1552,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.224;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1586,11 +1578,11 @@ allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
+allow 52.5.84.208;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 52.86.248.203;
 allow 5.34.182.203;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1711,6 +1703,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.39;
 allow 91.219.237.56;
@@ -1734,13 +1727,6 @@ allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.100.16.205;
 allow 94.102.51.15;
-allow 94.103.124.101;
-allow 94.103.124.104;
-allow 94.103.124.107;
-allow 94.103.124.121;
-allow 94.103.124.90;
-allow 94.103.124.91;
-allow 94.103.124.98;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
