--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -159,6 +159,7 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
 deny 154.26.159.157;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -701,6 +702,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -1162,7 +1164,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1178,13 +1179,6 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:150:6::1;
-deny 2a05:b0c7:67b0::1;
-deny 2a05:b0c7:67bb::1;
-deny 2a05:b0c7:6841::1;
-deny 2a05:b0c7:696c::1;
-deny 2a05:b0c7:6978::1;
-deny 2a05:b0c7:6b6c::1;
-deny 2a05:b0c7:6c28::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -1391,7 +1385,6 @@ deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
-deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
@@ -1435,13 +1428,13 @@ deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:203;
+deny 2a12:bec4:11d3:de9f::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
 deny 35.0.127.52;
 deny 37.114.37.81;
-deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1559,7 +1552,6 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.224;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1586,11 +1578,11 @@ deny 5.255.99.108;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
+deny 52.5.84.208;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 52.86.248.203;
 deny 5.34.182.203;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1711,6 +1703,7 @@ deny 91.208.75.178;
 deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
+deny 91.210.59.57;
 deny 91.219.236.101;
 deny 91.219.237.39;
 deny 91.219.237.56;
@@ -1734,13 +1727,6 @@ deny 93.99.104.18;
 deny 93.99.104.194;
 deny 94.100.16.205;
 deny 94.102.51.15;
-deny 94.103.124.101;
-deny 94.103.124.104;
-deny 94.103.124.107;
-deny 94.103.124.121;
-deny 94.103.124.90;
-deny 94.103.124.91;
-deny 94.103.124.98;
 deny 94.140.115.63;
 deny 94.142.241.194;
 deny 94.142.244.16;
