--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -132,6 +132,7 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.95.59.92;
 allow 141.95.59.93;
+allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
@@ -218,7 +219,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.78.131;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -903,6 +903,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -927,6 +928,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1454,7 +1456,6 @@ allow 38.152.53.253;
 allow 38.152.53.254;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.194.82.150;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1580,6 +1581,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.157.86.147;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1628,6 +1630,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.190.131;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1721,7 +1724,6 @@ allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
-allow 94.100.16.205;
 allow 94.102.51.15;
 allow 94.140.115.63;
 allow 94.142.241.194;
