--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -132,6 +132,7 @@ deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.95.59.92;
 deny 141.95.59.93;
+deny 141.98.11.62;
 deny 141.98.119.106;
 deny 142.44.133.81;
 deny 142.44.234.69;
@@ -218,7 +219,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.30.78.131;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -903,6 +903,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -927,6 +928,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1454,7 +1456,6 @@ deny 38.152.53.253;
 deny 38.152.53.254;
 deny 38.97.116.244;
 deny 41.216.183.87;
-deny 44.194.82.150;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1580,6 +1581,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.157.86.147;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1628,6 +1630,7 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
+deny 79.102.190.131;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
@@ -1721,7 +1724,6 @@ deny 93.95.231.88;
 deny 93.99.104.128;
 deny 93.99.104.18;
 deny 93.99.104.194;
-deny 94.100.16.205;
 deny 94.102.51.15;
 deny 94.140.115.63;
 deny 94.142.241.194;
