--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -132,6 +132,7 @@ set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.95.59.92;
 set_real_ip_from 141.95.59.93;
+set_real_ip_from 141.98.11.62;
 set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
@@ -218,7 +219,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.78.131;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -903,6 +903,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -927,6 +928,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1454,7 +1456,6 @@ set_real_ip_from 38.152.53.253;
 set_real_ip_from 38.152.53.254;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
-set_real_ip_from 44.194.82.150;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1580,6 +1581,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.157.86.147;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1628,6 +1630,7 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 79.102.190.131;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1721,7 +1724,6 @@ set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
-set_real_ip_from 94.100.16.205;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
