--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -113,7 +112,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -158,6 +156,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -700,6 +699,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -809,7 +809,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -903,6 +902,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -927,6 +927,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1453,7 +1454,7 @@ allow 38.152.53.252;
 allow 38.152.53.253;
 allow 38.152.53.254;
 allow 38.97.116.244;
-allow 41.216.183.87;
+allow 44.219.130.253;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1579,7 +1580,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.156.238.246;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1644,6 +1644,7 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
