--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -14,8 +15,6 @@ allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
-allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -112,6 +111,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -136,7 +136,6 @@ allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
-allow 144.172.118.76;
 allow 144.172.118.90;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -156,7 +155,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -204,6 +202,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.202;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -288,7 +287,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -508,9 +506,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.232;
-allow 185.241.208.236;
-allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
@@ -655,8 +650,6 @@ allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.233.174.56;
 allow 194.26.192.77;
-allow 194.26.196.116;
-allow 194.26.196.71;
 allow 194.62.248.21;
 allow 195.160.220.104;
 allow 195.176.3.19;
@@ -699,7 +692,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -809,6 +801,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -941,8 +934,6 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1046,7 +1037,6 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
-allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
@@ -1068,6 +1058,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1429,6 +1420,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.195.40.22;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1454,7 +1446,7 @@ allow 38.152.53.252;
 allow 38.152.53.253;
 allow 38.152.53.254;
 allow 38.97.116.244;
-allow 44.219.130.253;
+allow 41.216.183.87;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
